--- a/index.html
+++ b/index.html
@@ -18,15 +18,22 @@
     </tr>
   </table>
 
-  <p>My <strong>expertise </strong>is in Microfluidic Device Development,  New product development (NPD), Research and Development (R&D)
-    and is currently working in Mechanical Engineering Domain as <em>Research Scholar (Ph.D)</em> in
+  <p>My <strong>expertise </strong>is in Automotive plastic design using Catia V5, Injection Molding desing using Solid works, 
+    New product development (NPD), Research and Development (R&D) and is currently working in Mechanical Engineering Domain as 
+    <em>Technical Support Engineer-Mechanical Design (Ph.D)</em> in
+    Skill-lync, India. </p>
+  
+  <p>My <strong>research work in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related  designing and 
+    developing polymeric microfluidic devices for blood cells separation. It is related to 
+    New product development (NPD), Research and Development (R&D)
+    and is related to Mechanical Engineering Domain as <em>Research Scholar (Ph.D)</em> 
     IIT Madras, India and Deakin University, Australia. </p>
 
       <p>I have a combined working experience including PhD (6.5 years): Indian Institute of Technology (IIT Madras), Deakin University,
-      Cognizant Technology Solutions (CTS- Chennai and Coimbatore) </p>
+      Cognizant Technology Solutions (CTS- Chennai and Coimbatore) and Skill-Lync.</p>
 
-      <p>Attended workshop on Lean startup programs conducted by Gopalakrishna deshpande center at IIT Madras. </p>
-      <p>I Worked for Startups for Cold calling customers, target customer segmentation, Workflow development,
+      <p>I attended workshop on Lean startup programs conducted by Gopalakrishna deshpande center at IIT Madras. </p>
+      <p>I worked for Startups for Cold calling customers, target customer segmentation, Workflow development,
          Communication with the Customers, Business model development. </p>
 
 
@@ -48,8 +55,14 @@
 </tr>
 </thead>
 <tbody>
+  <tr>
+  <td>2017 - 2022</td>
+  <td>IIT Madras</td>
+  <td>Doctor of Philosophy - PhD</td>
+  <td>Mechanical Engineering</td>
+</tr>
 <tr>
-  <td>2015 - Present</td>
+  <td>2015 - 2022</td>
   <td>IIT Madras</td>
   <td>Doctor of Philosophy - PhD</td>
   <td>Mechanical Engineering</td>
