--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
   <p>My <strong>expertise </strong>is in Automotive plastic design using Catia V5, Injection Molding desing using Solid works, 
     New product development (NPD), Research and Development (R&D) and is currently working in Mechanical Engineering Domain as 
-    <em>Technical Support Engineer-Mechanical Design (Ph.D)</em> in
+    <em>Technical Support Engineer-Mechanical Design at
     Skill-lync, India. </p>
   
-  <p>My <strong>research work in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related  designing and 
+  <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related  designing and 
     developing polymeric microfluidic devices for blood cells separation. It is related to 
     New product development (NPD), Research and Development (R&D)
     and is related to Mechanical Engineering Domain as <em>Research Scholar (Ph.D)</em> 
@@ -116,13 +116,18 @@
     <tr>
       <td>Creo ProE </td>
       <td>⭐⭐⭐⭐⭐</td>
+    
+    <tr>
+      <td>Catia V5</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Solid Works</td>
+      <td>⭐⭐⭐⭐⭐</td>
+    </tr>
     <tr>
       <td>Unigraphics</td>
       <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>AutoCAD</td>
-      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Comsol 5.3a</td>
