--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 <tbody>
   <tr>
   <td>2017 - 2022</td>
-  <td>IIT Madras</td>
+  <td>Deakin University, Australia</td>
   <td>Doctor of Philosophy - PhD</td>
   <td>Mechanical Engineering</td>
 </tr>
 <tr>
   <td>2015 - 2022</td>
-  <td>IIT Madras</td>
+  <td>Insian Institute of Technology Madras, IIT M, India</td>
   <td>Doctor of Philosophy - PhD</td>
   <td>Mechanical Engineering</td>
 </tr>
@@ -71,7 +71,7 @@
   <td>2012-2014</td>
   <td>Osmania University</td>
   <td>Master of Engineering - M.E</td>
-  <td>Tool Design</td>
+  <td>Tool and Die Design</td>
 </tr>
 <tr>
   <td>2009-2011</td>
@@ -81,7 +81,7 @@
 </tr>
 <tr>
   <td>2005-2009</td>
-  <td>Sri Venkateswara University</td>
+  <td>Sri Venkateswara University, Tirupthi, India</td>
   <td>Bachelor of Technology- B.Tech</td>
   <td>Mechancial Engineering</td>
 </tr>
