--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
     <tr>
       <td><img src="Arcot.png" alt="Arcot Profile Picture"></td>
       <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
-      <p>Research Scholar (Ph.D) </p>
-      <p>IIT Madras - India</p>
-      <p>Deakin University - Australia</p>
+      <p>Doctor of Philosophy in Mechanical Engineering(Ph.D) </p>
+      <p>Deakin University - Australia and IIT Madras - India</p>
+     
 
     </tr>
   </table>
 
-  <p>My <strong>expertise </strong>is in Automotive plastic design using Catia V5, Injection Molding desing using Solid works, 
-    New product development (NPD), Research and Development (R&D) and is currently working in Mechanical Engineering Domain as 
-    <em>Technical Support Engineer-Mechanical Design at
-    Skill-lync, India. </p>
+  <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
+    Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
+    I am currently working as Technical Support Engineer - Mechanical Design in Mechanical Engineering Domain at Skill-lync, India.
+  My Linkedn profile is <a href="https://www.linkedin.com/in/yarcot/">About me</a> </p>
   
-  <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related  designing and 
-    developing polymeric microfluidic devices for blood cells separation. It is related to 
-    New product development (NPD), Research and Development (R&D)
-    and is related to Mechanical Engineering Domain as <em>Research Scholar (Ph.D)</em> 
-    IIT Madras, India and Deakin University, Australia. </p>
+  <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related to  designing and 
+    developing polymeric microfluidic devices for blood cells separation. I have used different fabrcation methods like 3D printing, Photo--Lithography,
+    Hot embossing and CNC Machining. The work is related to New product development (NPD), Advanced Manufacturing, Design of Medical devices. 
+    My research profile is available in <a href="https://www.researchgate.net/profile/Yugandhar-Arcot ">About my research profile</a> </p>. 
 
-      <p>I have a combined working experience including PhD (6.5 years): Indian Institute of Technology (IIT Madras), Deakin University,
-      Cognizant Technology Solutions (CTS- Chennai and Coimbatore) and Skill-Lync.</p>
+   <p>I have a combined working experience of 8.5 years including PhD at Indian Institute of Technology (IIT Madras), Deakin University,
+      Cognizant Technology Solutions (CTS- Chennai and Coimbatore) and Skill-Lync (Chennai and Bangalore).</p>
 
-      <p>I attended workshop on Lean startup programs conducted by Gopalakrishna deshpande center at IIT Madras. </p>
-      <p>I worked for Startups for Cold calling customers, target customer segmentation, Workflow development,
+   <p>I am part of workshop conducted on Lean startup programs conducted by Gopalakrishna deshpande center at IIT Madras. 
+         I am co-founder of a garment manufacturing startup which specializes in custom manufactuirng </p>
+
+   <p>I worked for Startups for Cold calling customers, target customer segmentation, Workflow development,
          Communication with the Customers, Business model development. </p>
 
 
