--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Personal.jpg" alt="Arcot Profile Picture"></td>
+      <td><img src="Personal.jpg" width=20% height=20% alt="Arcot Profile Picture"></td>
       <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
       <p>Doctor of Philosophy in Mechanical Engineering(Ph.D) </p>
       <p>Deakin University - Australia and IIT Madras - India</p>
