--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
     Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
     I am currently working as Technical Support Engineer - Mechanical Design in Mechanical Engineering Domain at Skill-lync, India.
-  My Linkedn profile is <a href="https://www.linkedin.com/in/yarcot/">About me</a> </p>
+   Please <a href="https://www.linkedin.com/in/yarcot/">click here</a> Linkedn profile is </p>
   
   <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related to  designing and 
     developing polymeric microfluidic devices for blood cells separation. I have used different fabrcation methods like 3D printing, Photo--Lithography,
     Hot embossing and CNC Machining. The work is related to New product development (NPD), Advanced Manufacturing, Design of Medical devices. 
-    My research profile is available in <a href="https://www.researchgate.net/profile/Yugandhar-Arcot ">About my research profile</a> </p>. 
+    Please <a href="https://www.researchgate.net/profile/Yugandhar-Arcot ">click here</a> for my research profile </p>. 
 
    <p>I have a combined working experience of 8.5 years including PhD at Indian Institute of Technology (IIT Madras), Deakin University,
       Cognizant Technology Solutions (CTS- Chennai and Coimbatore) and Skill-Lync (Chennai and Bangalore).</p>
@@ -50,12 +50,18 @@
 
 <tr>
   <th>Year</th>
-  <th>College</th>
-  <th>Degree</th>
-  <th>Subject</th>
+  <th>Job/College</th>
+  <th>Role/Degree</th>
+  <th>Area/Subject</th>
 </tr>
 </thead>
 <tbody>
+  <tr>
+  <td>2021 - Present</td>
+  <td>Insian Institute of Technology Madras, IIT M, India</td>
+  <td>Doctor of Philosophy - PhD</td>
+  <td>Mechanical Engineering</td>
+</tr>
   <tr>
   <td>2017 - 2022</td>
   <td>Deakin University, Australia</td>
