--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Arcot's personal site</title>
+  <title>Yugandhar's personal site</title>
 </head>
 
 <body>
@@ -58,9 +58,15 @@
 <tbody>
   <tr>
   <td>2021 - Present</td>
-  <td>Insian Institute of Technology Madras, IIT M, India</td>
-  <td>Doctor of Philosophy - PhD</td>
+  <td>Skill-Lync (Epowex Learning Technologies Pvt Ltd</td>
+  <td>Technical Support Engineer - Mechanical design</td>
   <td>Mechanical Engineering</td>
+</tr>
+  <tr>
+  <td>2021 - Present</td>
+  <td>Arca Customised Manufacturing Solutions</td>
+  <td>Co-Founder</td>
+  <td>Garment Manufacturing</td>
 </tr>
   <tr>
   <td>2017 - 2022</td>
@@ -70,7 +76,7 @@
 </tr>
 <tr>
   <td>2015 - 2022</td>
-  <td>Insian Institute of Technology Madras, IIT M, India</td>
+  <td>Indian Institute of Technology Madras, IIT M, India</td>
   <td>Doctor of Philosophy - PhD</td>
   <td>Mechanical Engineering</td>
 </tr>
