--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
    <p>I am part of workshop conducted on Lean startup programs conducted by Gopalakrishna deshpande center at IIT Madras. 
          I am co-founder of a garment manufacturing startup which specializes in custom manufactuirng </p>
 
-   <p>I worked for Startups for Cold calling customers, target customer segmentation, Workflow development,
-         Communication with the Customers, Business model development. </p>
+   <p>I worked for Startups in Cold calling customers, target customer segmentation, workflow development,
+         communication with the customers, business model development. </p>
 
 
 
