--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
  	 	<li> HVAC (Heating Ventilation and Air-conditioning) – ACE India Pvt Ltd: ISHRAE membership: KO/AM/OO/0184<a href="HVAC.pdf"><em>View Certificate</em></a></li>
   </ul>
 <hr size="2" noshade>
-  <h3>WORKING EXPERIENCE (7 YEARS - listed below)</h3>
+  <h3>WORKING EXPERIENCE (8.5 YEARS - listed below)</h3>
 
   <ul>
+    <li><strong>1.5years</strong>: Technical Support Engineer - Mechanical Design in Skill-Lync.com
     <li><strong>5.5years</strong>: PhD Scholar - Research and Development of fabrication techniques
       for mass fabrication of micro sized components using MEMS facilities. (CTC: Stipend 4,20,000 INR/Annum)</li>
  	     <li><strong>1.5 years</strong>: Software manual testing in Cognizant Technology Solutions. (CTC: 3,00,500 INR/Annum)  </li>
