--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
       <p>Doctor of Philosophy in Mechanical Engineering(Ph.D) </p>
       <p>Deakin University - Australia and IIT Madras - India</p>
-     <td><img src="Personal.jpg" width=20% height=20% alt="Arcot Profile Picture"></td>
+     <td><img src="Personal.jpg" width=15% height=15% alt="Yugandhar Profile Picture"></td>
      
 
     </tr>
