--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-  <table cellspacing="50">
+  <table align="center" style="margin: 0px auto;">
+
+  
     <tr>
       
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
@@ -59,7 +61,7 @@
 <tbody>
   <tr>
   <td>2021 - Present</td>
-  <td>Skill-Lync (Epowex Learning Technologies Pvt Ltd</td>
+  <td>Skill-Lync (Epowerx Learning Technologies Pvt Ltd</td>
   <td>Technical Support Engineer - Mechanical design</td>
   <td>Mechanical Engineering</td>
 </tr>
