--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <table style="border:1px solid black;margin-left:auto;margin-right:auto;">
+  <table align="center" style="border:0px solid black;margin-left:auto;margin-right:auto;">
 
   
     <tr>
