--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-  <table align="center" style="border:0px solid black;margin-left:auto;margin-right:auto;">
-
   
+
+  <table align="center">
     <tr>
       
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
