--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     </tr>
     <tr>
       <td>Electronics Manufacturing (Clean Room Facility)</td>
-      <td>⭐⭐⭐</td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Micro and Nano Manufacturing</td>
@@ -252,6 +252,10 @@
   <li>Y.Arcot,  G.L.Samuel,  Lingxue kong,  “A Novel  method  of  Fabricating  Nickel  Stamp  for
     Micro Hot-Embossing of Serpentine Microfluidic Channels on Polymethylmethacrylate”,
     Int. J. Precision Technology, Vol. 8, Nos. 2/3/4, 2019<a href="https://www.inderscience.com/info/inarticle.php?artid=100952"><em>Click here</em></a></li>
+  <li>Y.Arcot,  G.L.Samuel,  Lingxue kong,  “Manufacturability and Surface Characterisation of Polymeric Microfluidic Devices for Bio-medical Applications ”,
+    Int. J. Advanced Manufacturing Technology, Under Review , 2019<a href="https://www.researchgate.net/publication/356016469_Manufacturability_and_Surface_Characterisation_of_Polymeric_Microfluidic_Devices_for_Bio-medical_Applications"><em>Click here</em></a></li>
+  <li>G.L.Samuel,  Lingxue kong, Y. Arcot, Pavan Pandit  “Principles of Advanced Manufacturing Technologies for Biomedical Devices”,
+    published in  Advanced Micro- and Nano-manufacturing Technologies, Springer-Singapore href="https://www.springerprofessional.de/en/principles-of-advanced-manufacturing-technologies-for-biomedical/19721650"><em>Click here</em></a></li>
  	<li>Micro  Hot-Embossing  of  Serpentine  Channels  on  PMMA  based  Microfluidic  devices-
    International Conference on Precision, Meso, Micro and Nano Engineering – COPEN 10, 2017, IIT Madras, India <a href="Copen paper.pdf"><em>Click here</em></a></li>
 </ol>
@@ -259,10 +263,13 @@
   <h3>ACADEMIC PROJECTS </h3>
 
   <ol>
-    <li> 	“Analysis  of  Work  Material  Flow  Stress  Constitutive  Model  for  Simulation  of  Cutting Parameters”
-      in Sri Venkateswara University College of Engineering, Tirupathi</li>
+   
+  <li> 	“Fabrication of polymeric microfluidic devices for blood cell separation” in IIT Madras and Deakin University</li>
     <li> 	“Optimization and Effect of Process Parameters using Taguchi Method and ANOVA on ECAP Method for 120 degree
       Channel Dies” in Osmania University, Hyderabad</li>
+    <li> 	“Analysis  of  Work  Material  Flow  Stress  Constitutive  Model  for  Simulation  of  Cutting Parameters”
+      in Sri Venkateswara University College of Engineering, Tirupathi</li>
+    
   </ol>
 
   <h3>EXTRACURRICULAR ACTIVITIES</h3>
