--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
   <li>Y.Arcot,  G.L.Samuel,  Lingxue kong,  “Manufacturability and Surface Characterisation of Polymeric Microfluidic Devices for Bio-medical Applications ”,
     Int. J. Advanced Manufacturing Technology, Under Review , 2019<a href="https://www.researchgate.net/publication/356016469_Manufacturability_and_Surface_Characterisation_of_Polymeric_Microfluidic_Devices_for_Bio-medical_Applications"><em>Click here</em></a></li>
   <li>G.L.Samuel,  Lingxue kong, Y. Arcot, Pavan Pandit  “Principles of Advanced Manufacturing Technologies for Biomedical Devices”,
-    published in  Advanced Micro- and Nano-manufacturing Technologies, Springer-Singapore href="https://www.springerprofessional.de/en/principles-of-advanced-manufacturing-technologies-for-biomedical/19721650"><em>Click here</em></a></li>
+    published in  Advanced Micro- and Nano-manufacturing Technologies, Springer-Singapore 
+    <a href="https://www.springerprofessional.de/en/principles-of-advanced-manufacturing-technologies-for-biomedical/19721650"><em>Click here</em></a></li>
  	<li>Micro  Hot-Embossing  of  Serpentine  Channels  on  PMMA  based  Microfluidic  devices-
    International Conference on Precision, Meso, Micro and Nano Engineering – COPEN 10, 2017, IIT Madras, India <a href="Copen paper.pdf"><em>Click here</em></a></li>
 </ol>
