--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
    Please <a href="https://www.linkedin.com/in/yarcot/">click here</a> Linkedn profile is </p>
   
   <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related to  designing and 
-    developing polymeric microfluidic devices for blood cells separation. I have used different fabrcation methods like 3D printing, Photo--Lithography,
+    developing polymeric microfluidic devices for blood cells separation. I have used different fabrcation methods like 3D printing, Photo-Lithography,
     Hot embossing and CNC Machining. The work is related to New product development (NPD), Advanced Manufacturing, Design of Medical devices. 
-    Please <a href="https://www.researchgate.net/profile/Yugandhar-Arcot ">click here</a> for my research profile </p>. 
+    Please <a href="https://www.researchgate.net/profile/Yugandhar-Arcot ">click here</a> for my research profile. </p>
 
    <p>I have a combined working experience of 8.5 years including PhD at Indian Institute of Technology (IIT Madras), Deakin University,
       Cognizant Technology Solutions (CTS- Chennai and Coimbatore) and Skill-Lync (Chennai and Bangalore).</p>
@@ -181,8 +181,8 @@
   <h3>Certifications</h3>
 
   <ul>
-    <li> 	Lean Six Sigma- Green belt – Certified – G202015492 <a href="Six Sigma certificate.jpg"><em>View Certificate</em></a></li>
-    <li>CFD Comsol Certificate - Udemy <a href="Comsol CFD certificate.jpg"><em>View Certificate</em></a></li>
+    <li> Lean Six Sigma- Green belt – Certified – G202015492 <a href="Six Sigma certificate.jpg"><em>View Certificate</em></a></li>
+    <li> CFD Comsol Certificate - Udemy <a href="Comsol CFD certificate.jpg"><em>View Certificate</em></a></li>
     <li> NX-Unigraphics – Udemy <a href="UG certificate.jpg"><em>View Certificate</em></a></li>
  	 	<li> HVAC (Heating Ventilation and Air-conditioning) – ACE India Pvt Ltd: ISHRAE membership: KO/AM/OO/0184<a href="HVAC.pdf"><em>View Certificate</em></a></li>
   </ul>
@@ -248,7 +248,7 @@
 
 <h3>PUBLICATIONS</h3>
 
-<ol>
+<ul>
   <li>Y.Arcot,  G.L.Samuel,  Lingxue kong,  “A Novel  method  of  Fabricating  Nickel  Stamp  for
     Micro Hot-Embossing of Serpentine Microfluidic Channels on Polymethylmethacrylate”,
     Int. J. Precision Technology, Vol. 8, Nos. 2/3/4, 2019<a href="https://www.inderscience.com/info/inarticle.php?artid=100952"><em>Click here</em></a></li>
@@ -259,11 +259,11 @@
     <a href="https://www.springerprofessional.de/en/principles-of-advanced-manufacturing-technologies-for-biomedical/19721650"><em>Click here</em></a></li>
  	<li>Micro  Hot-Embossing  of  Serpentine  Channels  on  PMMA  based  Microfluidic  devices-
    International Conference on Precision, Meso, Micro and Nano Engineering – COPEN 10, 2017, IIT Madras, India <a href="Copen paper.pdf"><em>Click here</em></a></li>
-</ol>
+</ul>
 
   <h3>ACADEMIC PROJECTS </h3>
 
-  <ol>
+  <ul>
    
   <li> 	“Fabrication of polymeric microfluidic devices for blood cell separation” in IIT Madras and Deakin University</li>
     <li> 	“Optimization and Effect of Process Parameters using Taguchi Method and ANOVA on ECAP Method for 120 degree
@@ -271,7 +271,7 @@
     <li> 	“Analysis  of  Work  Material  Flow  Stress  Constitutive  Model  for  Simulation  of  Cutting Parameters”
       in Sri Venkateswara University College of Engineering, Tirupathi</li>
     
-  </ol>
+  </ul>
 
   <h3>EXTRACURRICULAR ACTIVITIES</h3>
 
@@ -287,7 +287,7 @@
 
   <h3>Other Interests</h3>
   <ul>
-    <li>3d Printing, Custom manufacturing, Tool designing, Application Engineering, Design of Experiments and Simulation for Manufacturing systems,
+    <li>3d Printing, Custom manufacturing, Data Sciences, Design of Experiments and Simulation for Manufacturing systems,
       Statistical control on Manufacturing systems, Plastic Recycling.</li>
   </ul>
 
