--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
   
-
+<div align="center" style="vertical-align:bottom">
+<div align="center" style="vertical-align:bottom">
   <table align="center">
     <tr>
       
@@ -21,6 +22,9 @@
     </tr>
   </table>
 
+  </div>
+</div>
+  
   <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
     Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
     I am currently working as Technical Support Engineer - Mechanical Design in Mechanical Engineering Domain at Skill-lync, India.
