--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body>
   
-<div align="center" style="vertical-align:bottom">
-<div align="center" style="vertical-align:bottom">
+ <center>
   <table align="center">
     <tr>
       
@@ -22,8 +21,8 @@
     </tr>
   </table>
 
-  </div>
-</div>
+ 
+</center>
   
   <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
     Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
