--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
  
 </center>
   
+  <hr size="3" noshade>
+  
   <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
     Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
     I am currently working as Technical Support Engineer - Mechanical Design in Mechanical Engineering Domain at Skill-lync, India.
@@ -122,13 +124,13 @@
   </ul>
   <h3>Technical Skills</h3>
 
-  <ol>
+  <ul>
     <li> CAD/Solid Modelling and Assembly: AutoCAD Creo/ProE, Unigraphics NX, and Comsol 5.3a.</li>
     <li>Manufacturing: Polymer Manufacturing (Tool and Die Design), Electronics Manufacturing (Clean Room Facility),
       Sheet Metal Manufacturing (Die Designing), Micro and Nano Manufacturing, Geometric Dimensioning & Tolerancing (GD &T) </li>
     <li>Programming Skills: Python 3.7 Programming, MS-Office, Software Testing- Manual, Intermediate Statistical Skills and Data Analysis </li>
     <li>Writing: Technical writing, Project proposal development, Scientific articles</li>
-  </ol>
+  </ul>
 
   <table>
 
@@ -193,13 +195,23 @@
   <h3>WORKING EXPERIENCE (8.5 YEARS - listed below)</h3>
 
   <ul>
-    <li><strong>1.5years</strong>: Technical Support Engineer - Mechanical Design in Skill-Lync.com
-    <li><strong>5.5years</strong>: PhD Scholar - Research and Development of fabrication techniques
+    <li><strong>1.5 years</strong>: Technical Support Engineer - Mechanical Design in Skill-Lync.com
+    <li><strong>5.5 years</strong>: PhD Scholar - Research and Development of fabrication techniques
       for mass fabrication of micro sized components using MEMS facilities. (CTC: Stipend 4,20,000 INR/Annum)</li>
  	     <li><strong>1.5 years</strong>: Software manual testing in Cognizant Technology Solutions. (CTC: 3,00,500 INR/Annum)  </li>
   </ul>
 <ol type="i">
+  
   <h3><li>Research and Development Experience at IIT Madras: (2015-2020)</li></h3>
+   <ul>
+      <li>Content development for design and development of Automotive plastic design using Catia V5.</li>
+ 	    <li>Content development for design and development of Injection molding using Solidworks.</li>
+ 	    <li>Training new trainees and students on the above content.</li>
+ 	    <li>Advanced Manufacturing Consultant</li>
+  </ul>
+  
+  
+  <h3><li>Research and Development Experience at Deakin University and IIT Madras: (2015-2022)</li></h3>
 
 
 
@@ -275,8 +287,22 @@
       in Sri Venkateswara University College of Engineering, Tirupathi</li>
     
   </ul>
+<hr size="3" noshade>
 
-  <h3>EXTRACURRICULAR ACTIVITIES</h3>
+ <h3>Personal details</h3>
+
+  <p><strong>Date of Birth:</strong> 7th April 1987</p>
+  <p><strong>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
+  <p><strong>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
+
+
+<h3>Other Interests</h3>
+  <ul>
+    <li>3d Printing, Custom manufacturing, Data Sciences, Design of Experiments and Simulation for Manufacturing systems,
+      Statistical control on Manufacturing systems, Plastic Recycling.</li>
+  </ul>
+
+  <h3>Extracurricular activities</h3>
 
   <ul>
    <li> 	Worked as joint secretary of department of Mechanical Engineering during B.Tech. </li>
@@ -288,18 +314,9 @@
    <li> 	Youngest  Boy  of  The Tournament  which  was  conducted  at  Rayalaseema  region  at Chittoor in 1997-98 </li>
   </ul>
 
-  <h3>Other Interests</h3>
-  <ul>
-    <li>3d Printing, Custom manufacturing, Data Sciences, Design of Experiments and Simulation for Manufacturing systems,
-      Statistical control on Manufacturing systems, Plastic Recycling.</li>
-  </ul>
+  <hr size="10" noshade>
 
-  <h3>Personal details</h3>
-
-  <p><strong>Date of Birth:</strong> 7th April 1987</p>
-  <p><strong>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
-  <p><strong>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
-
+ 
 
 </body>
 
