--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
  <h3>Personal details</h3>
 
   <p><strong>Date of Birth:</strong> 7th April 1987</p>
+  <p><strong>Marital status:</strong> Married</p>
   <p><strong>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
   <p><strong>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
 
