--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
  <center>
-  <table align="center">
+  <table>
     <tr>
       
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
