--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
       <p>Doctor of Philosophy in Mechanical Engineering(Ph.D) </p>
       <p>Deakin University - Australia and IIT Madras - India</p>
+      <p>Ph: +91-7780643806 & Email: yug.arcot@gmail.com</p>
+       
      <td><img src="Personal.jpg" width=15% height=15% alt="Yugandhar Profile Picture"></td>
      
 
