--- a/index.html
+++ b/index.html
@@ -293,10 +293,11 @@
 
  <h3>Personal details</h3>
 
-  <p><strong>Date of Birth:</strong> 7th April 1987</p>
-  <p><strong>Marital status:</strong> Married</p>
-  <p><strong>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
-  <p><strong>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
+  <p>Date of Birth:</strong> 7th April 1987</p>
+  <p>Marital status:</strong> Married</p>
+  <p>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
+  <p>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
+  <p>Ph: +91-7780643806 & Email: yug.arcot@gmail.com</p>
 
 
 <h3>Other Interests</h3>
@@ -317,9 +318,12 @@
    <li> 	Youngest  Boy  of  The Tournament  which  was  conducted  at  Rayalaseema  region  at Chittoor in 1997-98 </li>
   </ul>
 
-  <hr size="10" noshade>
+  <hr size="5" noshade>
 
- 
+ <p></p>
+<p></p>
+<p></p>
+
 
 </body>
 
