--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
      <td><h1><strong><em>Yugandhar Arcot</strong></em></h1>
       <p>Doctor of Philosophy in Mechanical Engineering(Ph.D) </p>
       <p>Deakin University - Australia and IIT Madras - India</p>
-      <p>Ph: +91-7780643806 & Email: yug.arcot@gmail.com</p>
+      <p>Ph: +91-7780643806 </p> 
+      <p>Email: yug.arcot@gmail.com</p>
        
-     <td><img src="Personal.jpg" width=15% height=15% alt="Yugandhar Profile Picture"></td>
+     <td><img src="Personal.jpg" width=18% height=18% alt="Yugandhar Profile Picture"></td>
      
 
     </tr>
