--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
 <hr size="3" noshade>
 
  <h3>Personal details</h3>
-
-  <p>Date of Birth:</strong> 7th April 1987</p>
-  <p>Marital status:</strong> Married</p>
-  <p>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </p>
-  <p>Current Address:</strong> 90,Lucky, Terracon residency,Kithaganahalli, Bommasandra - 560099</p>
-  <p>Ph: +91-7780643806 & Email: yug.arcot@gmail.com</p>
-
+ <ul>
+  <li>Date of Birth:</strong> 7th April 1987</li>
+  <li>Marital status:</strong> Married</li>
+  <li>Languages Known:</strong> Telugu, English, Tamil, Hindi, Kannada </li>
+  <li>Current Address:</strong> 90,Lucky, Terracon residency, Kithaganahalli, Bommasandra - 560099</li>
+  <li>Ph: +91-7780643806 & Email: yug.arcot@gmail.com</li>
+<\ul>
 
 <h3>Other Interests</h3>
   <ul>
