--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
  
 </center>
   
-  <hr size="3" noshade>
+  <hr size="4" noshade>
   
   <p>My <strong>expertise </strong>is in Advanced Manufactuting,  Automotive plastic design using Catia V5, Injection Molding desing using Solid works,
     Design of Biomedical devices, New product development (NPD), Research and Development (R&D). 
     I am currently working as Technical Support Engineer - Mechanical Design in Mechanical Engineering Domain at Skill-lync, India.
-   Please <a href="https://www.linkedin.com/in/yarcot/">click here</a> Linkedn profile is </p>
+   Please <a href="https://www.linkedin.com/in/yarcot/">click here</a> for my Linkedn profile.</p>
   
   <p>My <strong>research work </strong>in Deakin University, Australia and Indian Insitute of Technology Madras, India </strong>is related to  designing and 
     developing polymeric microfluidic devices for blood cells separation. I have used different fabrcation methods like 3D printing, Photo-Lithography,
@@ -52,7 +52,7 @@
 
     <a href="Contact Details.html">For Contact information</a>
 
-  <hr size="3" noshade>
+  <hr size="4" noshade>
   <h3>Timeline</h3>
 
 <table border="1">
@@ -194,7 +194,7 @@
     <li> NX-Unigraphics – Udemy <a href="UG certificate.jpg"><em>View Certificate</em></a></li>
  	 	<li> HVAC (Heating Ventilation and Air-conditioning) – ACE India Pvt Ltd: ISHRAE membership: KO/AM/OO/0184<a href="HVAC.pdf"><em>View Certificate</em></a></li>
   </ul>
-<hr size="2" noshade>
+<hr size="4" noshade>
   <h3>WORKING EXPERIENCE (8.5 YEARS - listed below)</h3>
 
   <ul>
@@ -262,7 +262,7 @@
   generated new business leads and arranged meetings. Handled 3D modeling of parts and Manufacturing of the parts.</p>
 
 </ol>
-<hr size="3" noshade>
+<hr size="4" noshade>
 
 <h3>PUBLICATIONS</h3>
 
@@ -290,7 +290,7 @@
       in Sri Venkateswara University College of Engineering, Tirupathi</li>
     
   </ul>
-<hr size="3" noshade>
+<hr size="4" noshade>
 
  <h3>Personal details</h3>
  <ul>
